--- a/minoc/src/main/webapp/service.yaml
+++ b/minoc/src/main/webapp/service.yaml
@@ -1,21 +1,22 @@
 swagger: '2.0'
 info:
   version: '0.6'
-  title: Artifact storage and management service (minoc)
-  description: 'A programmatic interface for storing, retrieving and managing artifacts at a storage site.<br/><br/>Clients may authenticate to this service in one of three ways:<br/>1.  By supplying an authentication token and using it as the auth-token parameter in the path.  URLs containing auth-tokens can be retrieved from the global locate service.<br/>2.  By providing a cookie in the Cookie header<br/>3.  By using a client certificate over SSL.'
+  title: Storage Inventory files service (minoc)
+  description: |
+    This service allows authorised users to read, write, update (metadata), and delete files. Pre-authorised URLs may be constructed by trusted services by including a signed pre-auth token in the path element before the Artifact URI.
 basePath: '/minoc'
 
 paths:
-  '/files/{artifact-uri}':
+  '/files/{Artifact.uri}':
     parameters:
-    - name: artifact-uri
+    - name: Artifact.uri
       in: path
       type: string
       description: The artifact URI
       required: true
     get:
       description: |
-        Download the file identified by parameter artifact-uri, optionally cutting a subset of a FITS file.
+        Download the file identified by parameter Artifact.uri, optionally cutting a subset of a FITS file.
       tags:
         - Artifact transfer
       summary: Download a file
@@ -28,23 +29,29 @@ paths:
           description: Successful response.
           headers:
             Content-Disposition:
-              description: 'The content-disposition of the file in the form<br/><br/>Content-Disposition\: inline; filename=\"\<name\>\"<br/><br/>where \<name\> is the last path segment of the URI of the artifact.'
+              description: Contains suggested filename
+              type: string
+            Content-Encoding:
+              description: The content encoding of the file
               type: string
             Content-Type:
               description: The content type of the file
               type: string
             Content-MD5:
-              description: The content MD5 of the file
+              description: The MD5 checksum of the file (not set if SUB used)
               type: string
             Content-Length:
-              description: The content length of the file
+              description: The length of the file in bytes (not set if SUB used)
               type: string
+            Last-Modified:
+              description: Timestamp when data was modified (not set if SUB used)
+              type: date
         '401':
-          description: If the client does not provide credentials and anonymous access is disallowed.
+          description: If the client does not provide credentials and anonymous access is disallowed
         '403':
-          description: If the client does not have permission.
+          description: If the client does not have permission
         '404':
-          description: If the artifact could not be found.
+          description: If the artifact could not be found
         '500':
           description: Internal error
         '503':
@@ -52,13 +59,14 @@ paths:
       parameters:
        - name: SUB
          in: query
-         description: 'Sub-region of a FITS file image.  Multiple SUB parameters are allowed and will generate MEF output in file order. Examples: entire extensions (SUB=[1]&SUB=[SCI,2]), or more general purpose (SUB=[SCI,3][400:500]).'
+         description: |
+          'Sub-region of a FITS file image.  Multiple SUB parameters are allowed and will generate MEF output in file order. Examples: entire extensions (SUB=[1]&SUB=[SCI,2]), or more general purpose (SUB=[SCI,3][400:500]).'
          required: false
          type: string
          collectionFormat: multi
     put:
       description: |
-        Upload a file identified by parameter artifact-uri.
+        Upload a file identified by parameter Artifact.uri
       tags:
         - Artifact transfer
       summary: Upload a file
@@ -68,11 +76,27 @@ paths:
         - application/octet-stream
       responses:
         '201':
-          description: Successful response
+          description: created - upload successful or transaction committed
+          headers:
+            Content-MD5:
+              description: The MD5 checksum of the file
+              type: string
+            Content-Length:
+              description: The length of the file in bytes
+              type: string
+        '202':
+          description: accepted - transaction started
+          headers:
+            X-Put-Txn:
+              description: transactionID
+              type: string
+            Content-Length:
+              description: The length of the file in bytes
+              type: string
         '401':
-          description: If the client does not provide credentials and anonymous access is disallowed.
+          description: If the client does not provide credentials and anonymous access is disallowed
         '403':
-          description: If the client does not have permission.
+          description: If the client does not have permission
         '500':
           description: Internal error
         '503':
@@ -86,16 +110,22 @@ paths:
         - name: Content-MD5
           in: header
           type: string
-          description: The content MD5 of the file
+          description: The MD5 checksum of the file
           required: false
         - name: Content-Length
           in: header
           type: string
-          description: The content length of the file
+          description: The number of bytes to be uploaded
+          required: false
+        - name: X-Put-Txn
+          in: header
+          type: string
+          description: |
+            "true" to start a new transaction; a transactionID to append to an existing transaction
           required: false
     head:
       description: |
-        Get the metadata for the file identified by parameter artifact-uri.
+        Get the metadata for the file identified by Artifact.uri
       tags:
         - Artifact management
       summary: View file metadata
@@ -105,60 +135,79 @@ paths:
         '200':
           description: Successful response
           headers:
+            Content-Disposition:
+              description: Contains suggested filename
+              type: string
+            Content-Encoding:
+              description: The content encoding of the file
+              type: string
             Content-Type:
               description: The content type of the file
               type: string
             Content-MD5:
-              description: The content MD5 of the file
+              description: The MD5 checksum of the file
               type: string
             Content-Length:
-              description: The content length of the file
+              description: The length of the file in bytes
+              type: string
+            Last-Modified:
+              description: Timestamp when data was modified
+              type: date
+            X-Put-Txn:
+              description: transactionID
               type: string
         '401':
-          description: If the client does not provide credentials and anonymous access is disallowed.
+          description: If the client does not provide credentials and anonymous access is disallowed
         '403':
-          description: If the client does not have permission.
+          description: If the client does not have permission
         '404':
-          description: If the artifact could not be found.
+          description: If the artifact could not be found
         '500':
           description: Internal error
         '503':
           description: Service busy
+      parameters:
+        - name: X-Put-Txn
+          in: header
+          type: string
+          description: transactionID to check state of an existing transaction
+          required: false
     delete:
       description: |
-        Delete the file identified by parameter artifact-uri.
+        Delete the file identified by parameter Artifact.uri
       tags:
         - Artifact management
       summary: Delete a file
       schemes:
         - https
       responses:
-        '200':
+        '204':
           description: Successful response 
         '401':
-          description: If the client does not provide credentials and anonymous access is disallowed.
+          description: If the client does not provide credentials and anonymous access is disallowed
         '403':
-          description: If the client does not have permission.
+          description: If the client does not have permission
         '404':
-          description: If the artifact could not be found.
+          description: If the artifact could not be found
         '500':
           description: Internal error
         '503':
           description: Service busy
+      parameters:
+        - name: X-Put-Txn
+          in: header
+          type: string
+          description: transactionID to abort
+          required: false
     post:
       description: |
         Set the metadata values for an file
       tags:
         - Artifact management
-      summary: Update the metadata of the file identified by parameter artifct-uri.
+      summary: Update file metadata
       schemes:
         - https
       parameters:
-        - name: uri
-          in: query
-          type: string
-          description: The new URI for the file
-          required: false
         - name: contentType
           in: query
           type: string
@@ -170,195 +219,33 @@ paths:
           description: The new content encoding of the file
           required: false
       responses:
-        '200':
-          description: Successful response
-        '401':
-          description: If the client does not provide credentials and anonymous access is disallowed.
-        '403':
-          description: If the client does not have permission.
-        '404':
-          description: If the artifact could not be found.
-        '500':
-          description: Internal error
-        '503':
-          description: Service busy
-  '/files/{auth-token}/{artifact-uri}':
-    parameters:
-    - name: auth-token
-      in: path
-      type: string
-      description: An authorization token
-      required: true
-    - name: artifact-uri
-      in: path
-      type: string
-      description: The artifact URI
-      required: true
-    get:
-      description: |
-        Download the file identified by parameter artifact-uri.
-      tags:
-        - Artifact transfer
-      summary: Download a file
-      schemes:
-        - https
-      produces:
-        - application/octet-stream
-      responses:
-        '200':
-          description: Successful response.
+        '202':
+          description: metadata change accepted
           headers:
             Content-Disposition:
-              description: 'The content-disposition of the file in the form<br/><br/>Content-Disposition\: inline; filename=\"\<name\>\"<br/><br/>where \<name\> is the last path segment of the URI of the artifact.'
+              description: Contains suggested filename
+              type: string
+            Content-Encoding:
+              description: The content encoding of the file
               type: string
             Content-Type:
               description: The content type of the file
               type: string
             Content-MD5:
-              description: The content MD5 of the file
+              description: The MD5 checksum of the file
               type: string
             Content-Length:
-              description: The content length of the file
+              description: The length of the file in bytes
               type: string
+            Last-Modified:
+              description: Timestamp when data was modified
+              type: date
         '401':
-          description: If the client does not provide credentials and anonymous access is disallowed.
+          description: If the client does not provide credentials and anonymous access is disallowed
         '403':
-          description: If the client does not have permission.
+          description: If the client does not have permission
         '404':
-          description: If the artifact could not be found.
-        '500':
-          description: Internal error
-        '503':
-          description: Service busy
-      parameters:
-        - name: SUB
-          in: query
-          description: 'Sub-region of a FITS file image.  Multiple SUB parameters are allowed and will generate MEF output in file order. Examples: entire extensions (SUB=[1]&SUB=[SCI,2]), or more general purpose (SUB=[SCI,3][400:500]).'
-          required: false
-          type: string
-          collectionFormat: multi
-    put:
-      description: |
-        Upload a file identified by parameter artifact-uri.
-      tags:
-        - Artifact transfer
-      summary: Upload a file
-      schemes:
-        - https
-      consumes:
-        - application/octet-stream
-      responses:
-        '201':
-          description: Successful response
-        '401':
-          description: If the client does not provide credentials and anonymous access is disallowed.
-        '403':
-          description: If the client does not have permission.
-        '500':
-          description: Internal error
-        '503':
-          description: Service busy
-      parameters:
-        - name: Content-Type
-          in: header
-          type: string
-          description: The content type of the file
-          required: false
-        - name: Content-MD5
-          in: header
-          type: string
-          description: The content MD5 of the file
-          required: false
-        - name: Content-Length
-          in: header
-          type: string
-          description: The content length of the file
-          required: false
-    head:
-      description: |
-        Get the metadata for the file identified by parameter artifact-uri.
-      tags:
-        - Artifact management
-      summary: View file metadata
-      schemes:
-        - https
-      responses:
-        '200':
-          description: Successful response
-          headers:
-            Content-Type:
-              description: The content type of the artifact
-              type: string
-            Content-MD5:
-              description: The content MD5 of the artifact
-              type: string
-            Content-Length:
-              description: The content length of the artifact
-              type: string
-        '401':
-          description: If the client does not provide credentials and anonymous access is disallowed.
-        '403':
-          description: If the client does not have permission.
-        '404':
-          description: If the artifact could not be found.
-        '500':
-          description: Internal error
-        '503':
-          description: Service busy
-    delete:
-      description: |
-        Delete the file identified by parameter artifact-uri.
-      tags:
-        - Artifact management
-      summary: Delete a file
-      schemes:
-        - https
-      responses:
-        '200':
-          description: Successful response 
-        '401':
-          description: If the client does not provide credentials and anonymous access is disallowed.
-        '403':
-          description: If the client does not have permission.
-        '404':
-          description: If the artifact could not be found.
-        '500':
-          description: Internal error
-        '503':
-          description: Service busy
-    post:
-      description: |
-        Set the metadata values for a file
-      tags:
-        - Artifact management
-      summary: Update the metadata of the file identified by parameter artifact-uri.
-      schemes:
-        - https
-      parameters:
-        - name: uri
-          in: query
-          type: string
-          description: The new URI for the file
-          required: false
-        - name: contentType
-          in: query
-          type: string
-          description: The new content type of the file
-          required: false
-        - name: contentEncoding
-          in: query
-          type: string
-          description: The new content encoding of the file
-          required: false
-      responses:
-        '200':
-          description: Successful response
-        '401':
-          description: If the client does not provide credentials and anonymous access is disallowed.
-        '403':
-          description: If the client does not have permission.
-        '404':
-          description: If the artifact could not be found.
+          description: If the artifact could not be found
         '500':
           description: Internal error
         '503':
