--- a/cadc-inventory-db/build.gradle
+++ b/cadc-inventory-db/build.gradle
@@ -2,13 +2,12 @@ plugins {
     id 'java'
     id 'maven'
     id 'maven-publish'
-    id 'com.jfrog.bintray' version '1.8.4'
     id 'checkstyle'
     id 'application'
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
     mavenLocal()
 }
 
@@ -19,6 +18,9 @@ sourceCompatibility = 1.8
 group = 'org.opencadc'
 
 version = '0.11.2'
+
+description = 'OpenCADC Storage Inventory database library'
+def git_url = 'https://github.com/opencadc/storage-inventory'
 
 mainClassName = 'org.opencadc.inventory.db.version.Main'
 
