--- a/cadc-inventory-server/build.gradle
+++ b/cadc-inventory-server/build.gradle
@@ -2,12 +2,11 @@ plugins {
     id 'java'
     id 'maven'
     id 'maven-publish'
-    id 'com.jfrog.bintray' version '1.8.4'
     id 'checkstyle'
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
     mavenLocal()
 }
 
@@ -15,12 +14,16 @@ sourceCompatibility = 1.8
 group = 'org.opencadc'
 version = '0.1.1'
 
+description = 'OpenCADC Storage Inventory server utility library'
+def git_url = 'https://github.com/opencadc/storage-inventory'
+
 dependencies {
     compile 'log4j:log4j:[1.2,)'
     compile 'org.opencadc:cadc-inventory:[0.7,1.0)'
     compile 'org.opencadc:cadc-inventory-db:[0.9,)'
     compile 'org.opencadc:cadc-util:[1.2,)'
     compile 'org.opencadc:cadc-rest:[1.2.18,)'
+    compile 'org.opencadc:cadc-cdp:[1.3,2.0)'
     compile 'org.opencadc:cadc-permissions:[0.2,)'
     compile 'org.opencadc:cadc-permissions-client:[0.2,)'
 
