--- a/cadc-storage-adapter-ad/build.gradle
+++ b/cadc-storage-adapter-ad/build.gradle
@@ -2,12 +2,11 @@ plugins {
     id 'java'
     id 'maven'
     id 'maven-publish'
-    id 'com.jfrog.bintray' version '1.8.4'
     id 'checkstyle'
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
     mavenLocal()
 }
 
@@ -17,9 +16,13 @@ group = 'org.opencadc'
 
 version = '0.2.5'
 
+description = 'OpenCADC Storage Inventory AdStorageAdapter implementation'
+def git_url = 'https://github.com/opencadc/storage-inventory'
+
 dependencies {
     compile 'log4j:log4j:[1.2,)'
     compile 'org.opencadc:cadc-util:[1.3.10,)'
+    compile 'org.opencadc:cadc-cdp:[1.3,2.0)'
     compile 'org.opencadc:cadc-dali:[1.2.1,)'
     compile 'org.opencadc:cadc-tap:[1.0.1,)'
     compile 'org.opencadc:cadc-inventory:[0.7,)'
