--- a/cadc-storage-adapter-fs/build.gradle
+++ b/cadc-storage-adapter-fs/build.gradle
@@ -2,12 +2,11 @@ plugins {
     id 'java'
     id 'maven'
     id 'maven-publish'
-    id 'com.jfrog.bintray' version '1.8.4'
     id 'checkstyle'
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
     mavenLocal()
 }
 
@@ -18,6 +17,9 @@ apply from: '../opencadc.gradle'
 group = 'org.opencadc'
 
 version = '0.6.3'
+
+description = 'OpenCADC Storage Inventory FileSystem StorageAdapter implementation'
+def git_url = 'https://github.com/opencadc/storage-inventory'
 
 dependencies {
     compile 'log4j:log4j:[1.2,)'
