--- a/cadc-storage-adapter-swift/build.gradle
+++ b/cadc-storage-adapter-swift/build.gradle
@@ -2,12 +2,11 @@ plugins {
     id 'java'
     id 'maven'
     id 'maven-publish'
-    id 'com.jfrog.bintray' version '1.8.4'
     id 'checkstyle'
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
     mavenLocal()
 }
 
@@ -18,6 +17,9 @@ group = 'org.opencadc'
 version = '0.5.0'
 
 apply from: '../opencadc.gradle'
+
+description = 'OpenCADC Storage Inventory SwiftStorageAdapter implementation'
+def git_url = 'https://github.com/opencadc/storage-inventory'
 
 dependencies {
     compile 'log4j:log4j:[1.2,)'
