--- a/cadc-storage-adapter-swift/build.gradle
+++ b/cadc-storage-adapter-swift/build.gradle
@@ -28,8 +28,8 @@ dependencies {
     compile 'org.opencadc:cadc-storage-adapter:[0.7.1,)'
 
     // swift API
-    //compile 'org.javaswift:joss:0.10.4-pdowler'
-    compile 'org.javaswift:joss:0.10.4'
+    compile 'org.opencadc:joss:0.10.4-pdowler1'
+    //compile 'org.javaswift:joss:0.10.4'
 
     //runtime 'org.slf4j:slf4j-nop:[1.6,)'
     runtime 'org.slf4j:slf4j-log4j12:[1.6,2.0)'
