--- a/cadc-storage-adapter-swift/build.gradle
+++ b/cadc-storage-adapter-swift/build.gradle
@@ -14,7 +14,7 @@ sourceCompatibility = 1.8
 
 group = 'org.opencadc'
 
-version = '0.5.2'
+version = '0.6.0'
 
 apply from: '../opencadc.gradle'
 
@@ -23,6 +23,7 @@ def git_url = 'https://github.com/opencadc/storage-inventory'
 
 dependencies {
     compile 'log4j:log4j:[1.2,)'
+    compile 'org.apache.commons:commons-pool2:[2.9,3.0)'
     compile 'org.opencadc:cadc-util:[1.3.10,)'
     compile 'org.opencadc:cadc-inventory:[0.7,)'
     compile 'org.opencadc:cadc-storage-adapter:[0.7.1,)'
