--- a/cadc-inventory-db/build.gradle
+++ b/cadc-inventory-db/build.gradle
@@ -26,7 +26,7 @@ mainClassName = 'org.opencadc.inventory.db.version.Main'
 
 dependencies {
     compile 'log4j:log4j:[1.2,)'
-    compile 'org.opencadc:cadc-util:[1.3.5,)'
+    compile 'org.opencadc:cadc-util:[1.5,2.0)'
     compile 'org.opencadc:cadc-inventory:[0.8,)'
 
     testCompile 'junit:junit:[4.0,)'
