--- a/luskan/build.gradle
+++ b/luskan/build.gradle
@@ -8,8 +8,6 @@ plugins {
 repositories {
     mavenCentral()
     mavenLocal()
-    //tmp to resolve uk.ac.starlink
-    jcenter()
 }
 
 apply from: '../opencadc.gradle'
@@ -31,17 +29,18 @@ dependencies {
 
     compile 'org.opencadc:cadc-util:[1.3.4,)'
     compile 'org.opencadc:cadc-adql:[1.1,)'
-    compile 'org.opencadc:cadc-access-control:[1.1.1,)'
     compile 'org.opencadc:cadc-uws:[1.0.2,)'
     compile 'org.opencadc:cadc-uws-server:[1.2.5,)'
     compile 'org.opencadc:cadc-dali:[1.1,)'
     compile 'org.opencadc:cadc-tap-server:[1.1.9,)'
-    compile 'org.opencadc:cadc-tap-schema:[1.1.9,)'
+    compile 'org.opencadc:cadc-tap-schema:[1.1.30,)'
     compile 'org.opencadc:cadc-tap-server-pg:[1.0.5,)'
 
     runtime 'org.opencadc:cadc-registry:[1.5.8,)'
     runtime 'org.opencadc:cadc-rest:[1.2.17,)'
     runtime 'org.opencadc:cadc-vosi:[1.3.7,)'
+    runtime 'org.opencadc:cadc-access-control:[1.1.1,)'
+    runtime 'org.opencadc:cadc-access-control-identity:[1.0.3,2.0)'
 
     testCompile 'junit:junit:[4.0,)'
 
@@ -54,6 +53,6 @@ dependencies {
 configurations {
   runtime.exclude group: 'javax.servlet'
   runtime.exclude group: 'net.sourceforge.jtds'
-  runtime.exclude group: 'org.restlet.jee'
+  runtime.exclude group: 'org.postgresql'
 }
 
