--- a/raven/src/main/webapp/WEB-INF/web.xml
+++ b/raven/src/main/webapp/WEB-INF/web.xml
@@ -73,17 +73,26 @@
       <param-name>ca.nrc.cadc.vosi.AvailabilityPlugin</param-name>
       <param-value>org.opencadc.raven.ServiceAvailability</param-value>
     </init-param>
-    <load-on-startup>5</load-on-startup>
+    <load-on-startup>4</load-on-startup>
   </servlet>
 
   <!-- VOSI capabilities -->
   <servlet>
     <servlet-name>CapabilitiesServlet</servlet-name>
-    <servlet-class>ca.nrc.cadc.vosi.CapabilitiesServlet</servlet-class>
-    <init-param>
-      <param-name>input</param-name>
-      <param-value>/capabilities.xml</param-value>
-    </init-param>
+        <servlet-class>ca.nrc.cadc.rest.RestServlet</servlet-class>
+        <init-param>
+            <param-name>init</param-name>
+            <param-value>ca.nrc.cadc.vosi.CapInitAction</param-value>
+        </init-param>
+        <init-param>
+            <param-name>get</param-name>
+            <param-value>ca.nrc.cadc.vosi.CapGetAction</param-value>
+        </init-param>
+        <init-param>
+            <param-name>input</param-name>
+            <param-value>/capabilities.xml</param-value>
+        </init-param>
+        <load-on-startup>4</load-on-startup>
   </servlet>
 
   <!-- Endpoints -->
