--- a/minoc/build.gradle
+++ b/minoc/build.gradle
@@ -41,7 +41,8 @@ dependencies {
     compile 'org.opencadc:cadc-permissions-client:[0.2,)'
     compile 'org.opencadc:cadc-gms:[1.0,)'
     
-    compile 'org.opencadc:nom-tam-fits:[1.16.2,2.0)'
+    //compile 'org.opencadc:nom-tam-fits:[1.16.2,2.0)'
+    compile 'org.opencadc:nom-tam-fits:1.16.2'
 
     testCompile 'junit:junit:[4.0,)'
     testCompile 'org.opencadc:cadc-storage-adapter-fs:[0.6,)'
