--- a/ratik/build.gradle
+++ b/ratik/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile 'org.opencadc:cadc-inventory-db:[0.12.0,1.0)'
     compile 'org.opencadc:cadc-inventory-util:[0.1.4,1.0)'
     compile 'org.opencadc:cadc-registry:[1.5,2.0)'
+    compile 'org.opencadc:cadc-tap:[1.1.4,2.0)'
 
     testCompile 'junit:junit:[4.12,5.0)'
 }
