--- a/luskan/src/main/webapp/WEB-INF/web.xml
+++ b/luskan/src/main/webapp/WEB-INF/web.xml
@@ -126,7 +126,7 @@
         </init-param>
         <init-param>
             <param-name>authRequired</param-name>
-            <param-value>true</param-value>
+            <param-value>false</param-value>
 	</init-param>
         <load-on-startup>3</load-on-startup>
     </servlet>
