--- a/baldur/src/test/resources/testDuplicateEntries/baldur.properties
+++ b/baldur/src/test/resources/testDuplicateEntries/baldur.properties
@@ -2,7 +2,9 @@ org.opencadc.baldur.grantExpiry = 60
 
 org.opencadc.baldur.allowedUser = CN=test,OU=cadc,O=hia,C=ca
 
-org.opencadc.baldur.entry = test .*TE.*
+org.opencadc.baldur.entry = test
+test.pattern = .*TE.*
 test.anon = false
 
-org.opencadc.baldur.entry = test .*ST.*
+org.opencadc.baldur.entry = test
+test.pattern =  .*ST.*
