--- a/baldur/src/test/resources/testDuplicatePermissions/baldur.properties
+++ b/baldur/src/test/resources/testDuplicatePermissions/baldur.properties
@@ -2,6 +2,7 @@ org.opencadc.baldur.grantExpiry = 60
 
 org.opencadc.baldur.allowedUser = CN=test,OU=cadc,O=hia,C=ca
 
-org.opencadc.baldur.entry = test .*TE.*
+org.opencadc.baldur.entry = test
+test.pattern = .*TE.*
 test.anon = false
 test.anon = false
