--- a/baldur/src/test/resources/testMultipleMatches/baldur.properties
+++ b/baldur/src/test/resources/testMultipleMatches/baldur.properties
@@ -2,8 +2,10 @@ org.opencadc.baldur.grantExpiry = 60
 
 org.opencadc.baldur.allowedUser = CN=test,OU=cadc,O=hia,C=ca
 
-org.opencadc.baldur.entry = test1 .*TE.*
+org.opencadc.baldur.entry = test1
+test1.pattern = .*TE.*
 test1.anon = false
 
-org.opencadc.baldur.entry = test2 .*ST.*
+org.opencadc.baldur.entry = test2
+test2.pattern = .*ST.*
 test2.anon = true
