--- a/baldur/src/test/resources/testOverlappingPermissions/baldur.properties
+++ b/baldur/src/test/resources/testOverlappingPermissions/baldur.properties
@@ -2,12 +2,14 @@ org.opencadc.baldur.grantExpiry = 60
 
 org.opencadc.baldur.allowedUser = CN=test,OU=cadc,O=hia,C=ca
 
-org.opencadc.baldur.entry = test1 .*TE.*
+org.opencadc.baldur.entry = test1
+test1.pattern = .*TE.*
 test1.anon = false
 test1.readOnlyGroup = ivo://cadc.nrc.ca/gms?group1
 test1.readWriteGroup = ivo://cadc.nrc.ca/gms?group2
 
-org.opencadc.baldur.entry = test2 .*ST.*
+org.opencadc.baldur.entry = test2
+test2.pattern = .*ST.*
 test2.anon = true
 test2.readOnlyGroup = ivo://cadc.nrc.ca/gms?group3
 test2.readWriteGroup = ivo://cadc.nrc.ca/gms?group4
