--- a/cadc-storage-adapter-swift/build.gradle
+++ b/cadc-storage-adapter-swift/build.gradle
@@ -14,7 +14,7 @@ sourceCompatibility = 1.8
 
 group = 'org.opencadc'
 
-version = '0.8.6'
+version = '0.8.7'
 
 apply from: '../opencadc.gradle'
 
@@ -28,7 +28,7 @@ dependencies {
     compile 'org.opencadc:cadc-storage-adapter:[0.11.2,)'
 
     // swift API
-    compile 'org.opencadc:joss:0.10.4-pdowler1'
+    compile 'org.opencadc:joss:[0.11.0,)'
     //compile 'org.javaswift:joss:0.10.4'
 
     //runtime 'org.slf4j:slf4j-nop:[1.6,)'
