--- a/vault/src/main/webapp/WEB-INF/web.xml
+++ b/vault/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,7 @@
           ca.nrc.cadc.rest
           ca.nrc.cadc.util
           ca.nrc.cadc.vosi
+          ca.nrc.cadc.uws
       </param-value>
     </init-param>
     <init-param>
@@ -61,6 +62,30 @@
     </init-param>
     <load-on-startup>2</load-on-startup>
   </servlet>
+
+  <!-- async recursive node property setting servlet-->
+  <servlet>
+    <servlet-name>RecursiveDeleteNodeServlet</servlet-name>
+    <servlet-class>ca.nrc.cadc.uws.server.JobServlet</servlet-class>
+    <init-param>
+      <param-name>get</param-name>
+      <param-value>ca.nrc.cadc.uws.web.GetAction</param-value>
+    </init-param>
+    <init-param>
+      <param-name>post</param-name>
+      <param-value>ca.nrc.cadc.uws.web.PostAction</param-value>
+    </init-param>
+    <init-param>
+      <param-name>delete</param-name>
+      <param-value>ca.nrc.cadc.uws.web.DeleteAction</param-value>
+    </init-param>
+    <init-param>
+      <param-name>ca.nrc.cadc.uws.server.JobManager</param-name>
+      <param-value>org.opencadc.vault.RecursiveDeleteNodeJobManager</param-value>
+    </init-param>
+    <load-on-startup>3</load-on-startup>
+  </servlet>
+
 
   <!-- VOSI capabilities -->
   <servlet>
@@ -105,6 +130,11 @@
   <servlet-mapping>
     <servlet-name>NodesServlet</servlet-name>
     <url-pattern>/nodes/*</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>RecursiveDeleteNodeServlet</servlet-name>
+    <url-pattern>/recursiveDelete/*</url-pattern>
   </servlet-mapping>
 
   <!-- Availability servlet endpoint -->
