--- a/vault/src/main/webapp/WEB-INF/web.xml
+++ b/vault/src/main/webapp/WEB-INF/web.xml
@@ -81,7 +81,7 @@
     </init-param>
     <init-param>
       <param-name>ca.nrc.cadc.uws.server.JobManager</param-name>
-      <param-value>org.opencadc.vospace.server.async.RecursiveDeleteNodeJobManager</param-value>
+      <param-value>org.opencadc.vault.RecursiveDeleteNodeJobManager</param-value>
     </init-param>
     <load-on-startup>3</load-on-startup>
   </servlet>
