--- a/vault/build.gradle
+++ b/vault/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     compile 'org.opencadc:cadc-gms:[1.0.5,)'
     compile 'org.opencadc:cadc-rest:[1.3.16,)'
     compile 'org.opencadc:cadc-vos:[2.0,)'
-    compile 'org.opencadc:cadc-vos-server:[2.0.1,)'
+    compile 'org.opencadc:cadc-vos-server:[2.0.3,)'
     compile 'org.opencadc:cadc-vosi:[1.3.2,)'
     compile 'org.opencadc:cadc-uws:[1.0,)'
     compile 'org.opencadc:cadc-uws-server:[1.2.19,)'
@@ -51,7 +51,7 @@ dependencies {
     runtime 'org.opencadc:cadc-gms:[1.0.5,)'
 
     intTestCompile 'org.opencadc:cadc-test-vosi:[1.0.11,)'
-    intTestCompile 'org.opencadc:cadc-test-vos:[2.0,3.0)'
+    intTestCompile 'org.opencadc:cadc-test-vos:[2.1,)'
 }
 
 configurations {
