--- a/cadc-inventory-server/build.gradle
+++ b/cadc-inventory-server/build.gradle
@@ -12,20 +12,22 @@ repositories {
 
 sourceCompatibility = 1.8
 group = 'org.opencadc'
-version = '0.2.2'
+version = '0.3.0'
 
 description = 'OpenCADC Storage Inventory server utility library'
 def git_url = 'https://github.com/opencadc/storage-inventory'
 
 dependencies {
     compile 'org.opencadc:cadc-inventory:[0.7,1.0)'
-    compile 'org.opencadc:cadc-inventory-db:[0.9,)'
+    compile 'org.opencadc:cadc-inventory-db:[0.15,)'
     compile 'org.opencadc:cadc-util:[1.9,2.0)'
     compile 'org.opencadc:cadc-rest:[1.3.14,)'
     compile 'org.opencadc:cadc-gms:[1.0.4,)'
     compile 'org.opencadc:cadc-cdp:[1.3,2.0)'
     compile 'org.opencadc:cadc-permissions:[0.2,)'
     compile 'org.opencadc:cadc-permissions-client:[0.3,)'
+    compile 'org.opencadc:cadc-vos:[2.0,3.0)'
+    compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
 
     testCompile 'junit:junit:[4.0,)'
 }
