--- a/raven/build.gradle
+++ b/raven/build.gradle
@@ -26,7 +26,7 @@ war {
 }
 
 dependencies {
-    compile 'org.opencadc:cadc-util:[1.10.2,2.0)'
+    compile 'org.opencadc:cadc-util:[1.10.3,2.0)'
     compile 'org.opencadc:cadc-log:[1.1.6,2.0)'
     compile 'org.opencadc:cadc-registry:[1.7,)'
     compile 'org.opencadc:cadc-vosi:[1.4.3,2.0)'
@@ -34,9 +34,9 @@ dependencies {
     compile 'org.opencadc:cadc-cdp:[1.0,)'
     compile 'org.opencadc:cadc-gms:[1.0.4,)'
     compile 'org.opencadc:cadc-inventory:[0.9.4,2.0)'
-    compile 'org.opencadc:cadc-inventory-db:[0.14.5,0.15)'
-    compile 'org.opencadc:cadc-inventory-server:[0.3,)'
-    compile 'org.opencadc:cadc-permissions:[0.3.1,)'
+    compile 'org.opencadc:cadc-inventory-db:[0.15.0,)'
+    compile 'org.opencadc:cadc-inventory-server:[0.3.0,)'
+    compile 'org.opencadc:cadc-permissions:[0.3.5,)'
     compile 'org.opencadc:cadc-permissions-client:[0.3,)'
     compile 'org.opencadc:cadc-vos:[1.2,2.0)'
 
