--- a/vault/src/main/webapp/WEB-INF/web.xml
+++ b/vault/src/main/webapp/WEB-INF/web.xml
@@ -34,19 +34,6 @@
     <load-on-startup>1</load-on-startup>
   </servlet>
 
-    <servlet>
-    <servlet-name>PubKeyServlet</servlet-name>
-    <servlet-class>ca.nrc.cadc.rest.RestServlet</servlet-class>
-        <init-param>
-          <param-name>augmentSubject</param-name>
-          <param-value>false</param-value>
-        </init-param>
-        <init-param>
-          <param-name>get</param-name>
-          <param-value>org.opencadc.vault.GetKeyAction</param-value>
-        </init-param>
-    </servlet>
-    
   <servlet>
     <servlet-name>NodesServlet</servlet-name>
     <servlet-class>ca.nrc.cadc.rest.RestServlet</servlet-class>
@@ -76,6 +63,20 @@
     </init-param>
     <load-on-startup>2</load-on-startup>
   </servlet>
+  
+    <servlet>
+        <servlet-name>PubKeyServlet</servlet-name>
+        <servlet-class>ca.nrc.cadc.rest.RestServlet</servlet-class>
+        <init-param>
+          <param-name>augmentSubject</param-name>
+          <param-value>false</param-value>
+        </init-param>
+        <init-param>
+          <param-name>get</param-name>
+          <param-value>org.opencadc.inventory.transfer.GetKeyAction</param-value>
+        </init-param>
+        <load-on-startup>3</load-on-startup>
+    </servlet>
 
     <!-- sync transfer servlet-->
     <servlet>
