--- a/minoc/src/main/webapp/WEB-INF/web.xml
+++ b/minoc/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,7 @@
             ca.nrc.cadc.util
             ca.nrc.cadc.vosi
             ca.nrc.cadc.db
+            ca.nrc.cadc.reg
       </param-value>
     </init-param>
     <init-param>
